Fix main and news page alignment

--- a/src/index.scss
+++ b/src/index.scss
@@ -47,3 +47,14 @@ code {
   padding: 1rem;
   border-radius: 1rem;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  margin: 0;
+}
