--- a/src/scss/Partners.module.scss
+++ b/src/scss/Partners.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: stretch;
-  padding: 1rem;
+  margin: 1rem;
   overflow: hidden;
 
   .title {
