--- a/src/scss/news.module.scss
+++ b/src/scss/news.module.scss
@@ -1,24 +1,19 @@
 @import "common.scss";
 
 .news_grid {
-  width: 92%;
-  min-height: 40vh;
   height: auto;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
   padding-bottom: 4rem;
-  margin: 0 1rem;
-
-  &.shrink {
-    margin: 0 auto;
-  }
+  margin: 1rem;
+  gap: 2rem;
 
   .title {
     font-family: "Roboto", sans-serif;
     font-size: 3.5rem;
-    font-weight: 400;
+    font-weight: 700;
     line-height: 3.5rem;
     letter-spacing: 0.04em;
     text-align: left;
@@ -43,7 +38,7 @@
   display: flex;
   flex-direction: column;
   align-items: stretch;
-  gap: 2rem;
+  gap: 1.5rem;
 }
 
 .news {
